# donut-game-maker

./: .gitignore  .gitmodules  CMakeLists.txt  donut.h  donut.h.in  main.cpp  test.cpp
libs/docs/sdlwiki/: sdl.qch  sdl.qhp
libs/docs/sdlwiki/SDL2/: CategoryAPI.html  CategoryAssertions.html  CategoryCategory.html  CategoryDefine.html  CategoryError.html  CategoryForceFeedback.html  CategoryHints.html  CategoryInit.html  CategoryLog.html  CategoryVersion.html  Installation.html  SDL_CreateWindow.html  SDL_CreateWindowFrom.html  SDL_DestroyWindow.html  SDL_GetDesktopDisplayMode.html  SDL_RenderGetMetalCommandEncoder.html  SDL_Renderer.html  Tutorials.html
libs/docs/sdlwiki/SDL2_mixer/: Mix_FadeInChannel.html  Mix_FadeInChannelTimed.html  Mix_FadeInMusic.html  Mix_FadeInMusicPos.html  Mix_FadeOutMusic.html  Mix_OpenAudio.html  Mix_PlayChannel.html  Mix_SetPosition.html  Mix_UnregisterEffect.html
libs/docs/sdlwiki/SDL3/: APIByCategory.html  CategoryAPI.html  CategoryAndroid.html  CategoryAssertions.html  CategoryAtomic.html  CategoryAudio.html  CategoryBits.html  CategoryCPU.html  CategoryCategory.html  CategoryClipboard.html  CategoryDefine.html  CategoryDraft.html  CategoryEndian.html  CategoryEnum.html  CategoryError.html  CategoryEvents.html  CategoryFilesystem.html  CategoryForceFeedback.html  CategoryHeader.html  CategoryHints.html  CategoryIO.html  CategoryInit.html  CategoryJoystick.html  CategoryKeyboard.html  CategoryLinux.html  CategoryLog.html  CategoryMouse.html  CategoryMutex.html  CategoryPixels.html  CategoryPlatform.html  CategoryPower.html  (+74 more)
(+53 files in other folders)
